# AC2D

./: .gitignore  AC2D.pro  Body.cpp  Body.h  CMakeLists.txt  ClassesDeclarations.h  CollisionSystem.cpp  Components.h  DrawSystem.cpp  DrawSystem.h  ECSGameplay.cpp  ECSGameplay.h  ExitStage.cpp  ExitStage.h  Functions.cpp  Functions.h  GameStage.cpp  GameStage.h  GameplayStage.cpp  GameplayStage.h  LibsAndDeclarations.h  MenuStage.cpp  MenuStage.h  README.md  ResourcesManager.cpp  ResourcesManager.h  main.cpp  vertex_data.h
Components/: gravity.h  movement.h  player.cpp  player.h  position.h  rotation.h  shapes.h  velocity.cpp  velocity.h
Systems/: GravitySystem.cpp  GravitySystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  movementsystem.cpp  movementsystem.h
